gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordmesh
  annotations:
    sidecar.istio.io/inject: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordmesh
  template:
    metadata:
      labels:
        app: wordmesh
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: wordmesh
          image: 'quay.io/rh_ee_sshirodk/wordmesh:v1'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
