gitops/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: wordmesh-gateway
spec:
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - '*'
  selector:
    istio: ingressgateway
