gitops/destinationrules.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: wordmesh-dr
spec:
  host: start
  subsets:
    - name: v1
      labels:
        version: v1
